tdf#148791 tdf#64902 tdf#127759 sw: fix row insert/paste

Table insertion mode and Paste as Rows Above inserted
only a single row above, and overwrite the next ones in
the following cases (instead of inserting/pasting rows
above according to the clipboard table content):

The table stored in the clipboard

– has centered, right or not paragraph starting alignment;

– or its resource table has a table header with 2 or more
  repeating rows, and the clipboard content contains the
  same amount or less rows (it doesn't matter, that
  the copied rows weren't header rows originally).

The reason was that parsing of the HTML clipboard content
which is used for counting the row count of the clipboard
content hadn't handle the following cases:

– different table aligment results <tr> elements with
  greater indentation level in the HTML extract, according
  to the new root element <center>, <div> or <dl>;

– copying rows from a table with row header always starts
  with <thead> in the HTML extract, i.e. detecting <tbody>
  can fail, because there could be only <thead> in the
  HTML extract (see Case 2 above).

Follow-up to commit 0c8b1efbad48fa9697c0b1afbe4753bbbc3c4c5c
"tdf#127759 Writer: add table row/column insert mode" and
commit 7efae60f3625a58f8a617c80f2a55a695fbaef36
"tdf#64902 Writer table: Paste Special->Rows Above".

Change-Id: I466cea20705bc5dd5455e22842da7dfa6631ba81
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133445
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>